--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
+
+  <!--<script defer type="module" src="http://localhost:3000/src/main.js"></script>-->
+  <script defer src="https://fox-tales.vercel.app/main.js"></script>
 </head>
 
 <body>
